--- a/src/app/cards/card/card.component.html
+++ b/src/app/cards/card/card.component.html
@@ -1,22 +1,17 @@
-<mat-card
-  class="card"
+<div
+  class="container"
   [ngStyle]="{
-    borderTop: '5px solid var(--color-primary-' + cardParams.color + ')'
+    borderTopColor: 'var(--color-primary-' + cardParams.color + ')'
   }"
 >
-  <mat-card-header>
-    <mat-card-title class="title">{{ cardParams.title }}</mat-card-title>
-    <mat-card-subtitle class="subtitle">{{
-      cardParams.subtitle
-    }}</mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-content class="content"
-    ><img
-      [src]="
-        '../../../assets/images/icon-' +
-        cardParams.title.toLowerCase().split(' ').join('-') +
-        '.svg'
-      "
-      [alt]="cardParams.title"
-  /></mat-card-content>
-</mat-card>
+  <h2>{{ cardParams.title }}</h2>
+  <p>{{ cardParams.subtitle }}</p>
+  <img
+    [src]="
+      '../../../assets/images/icon-' +
+      cardParams.title.toLowerCase().split(' ').join('-') +
+      '.svg'
+    "
+    [alt]="cardParams.title"
+  />
+</div>
