--- a/src/app/cards/card/card.component.css
+++ b/src/app/cards/card/card.component.css
@@ -1,21 +1,29 @@
 :host {
   background-color: white;
   border-radius: 10px;
+  height: 14.062rem;
   overflow: hidden;
 }
 
 .container {
   border-top: 4px solid;
-  padding: 1.45rem 9.524%;
+  padding: 1.45rem 9.524% 1.875rem;
 }
 
 h2 {
   color: var(--color-neutral-very-dark-blue);
   font-size: 1.25rem;
   font-weight: 600;
+  margin-bottom: 0.32rem;
 }
 
 p {
   color: var(--color-neutral-grayish-blue);
   font-size: 0.83rem;
+  line-height: 1.65;
+}
+
+img {
+  display: block;
+  margin-left: auto;
 }
