--- a/src/app/cards/card/card.component.html
+++ b/src/app/cards/card/card.component.html
@@ -1,7 +1,7 @@
 <div
   class="container"
   [ngStyle]="{
-    borderTopColor: 'var(--color-primary-' + cardParams.color + ')'
+    borderTopColor: 'var(--color-primary-' + cardParams.color + ')',
   }"
 >
   <h2>{{ cardParams.title }}</h2>
