--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -2,5 +2,8 @@
   *ngFor="let card of cards"
   class="mat-elevation-z6"
   [cardParams]="card"
-  [ngStyle]="{ order: card.order }"
+  [ngStyle]="{
+    gridArea: card.title.toLowerCase().split(' ').join('-'),
+    order: card.order
+  }"
 ></app-card>
