--- a/src/app/cards/card/card.component.css
+++ b/src/app/cards/card/card.component.css
@@ -7,6 +7,9 @@
 
 .container {
   border-top: 4px solid;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   padding: 1.45rem 9.524% 1.875rem;
 }
 
@@ -24,6 +27,12 @@ p {
 }
 
 img {
-  display: block;
-  margin-left: auto;
+  align-self: flex-end;
+  margin-top: auto;
+}
+
+@media (min-width: 90rem) {
+  :host {
+    height: 15.625rem;
+  }
 }
